--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 2; font-family: Roboto, "Helvetica Neue", sans-serif; }
+h1 {
+  text-align: center;
+}
+.mat-toolbar {
+  margin-top: 5px;
+}
+
+.container {
+    padding-left: 100px;
+    padding-right: 100px;
+}
